# summary-of-some-paper-in-cuda

./: .env.example  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  README.md  arxiv_index.txt  database.py  external.py  external_papers.db  import_jsonl.py  links.txt  main.py  main_prompt.txt  mkdocs.yml  multi_prompt.py  neon_db.py  papers.txt  papers1.txt  pyproject.toml  sync_db.py
daily_papers/: HOWTO.md  examples.py  hf_daily_papers.py  paper_server.py  paper_viewer.py  papers_by_score.py  tag_papers.py
docs/: index.md
docs/agents/: 1504.00702-End-to-End-Training-of-Deep-Visuomotor-Policies.md  2112.09332-WebGPT-Browser-assisted-question-answering-with-human-feedback.md  2204.01691-Do-As-I-Can-Not-As-I-Say-Grounding-Language-in-Robotic-Affordances.md  2210.03629-REACT-SYNERGIZING-REASONING-AND-ACTING-IN-LANGUAGE-MODELS.md  2302.04761-Toolformer-Language-Models-Can-Teach-Themselves-to-Use-Tools.md  2303.11366-Reflexion-Language-Agents-with-Verbal-Reinforcement-Learning.md  2304.03442-Generative-Agents-Interactive-Simulacra-of-Human-Behavior.md  2305.16291-VOYAGER-An-Open-Ended-Embodied-Agent-with-Large-Language-Models.md  2406.04692-Mixture-of-Agents-Enhances-Large-Language-Model-Capabilities.md  2406.12793-ChatGLM-A-Family-of-Large-Language-Models-from-GLM-130B-to-GLM-4-All-Tools.md  2408.07060-DIVERSITY-EMPOWERS-INTELLIGENCE-INTEGRATING-EXPERTISE-OF-SOFTWARE-ENGINEERING-AG.md  2409.04109-Can-LLMs-Generate-Novel-Research-Ideas-A-Large-Scale-Human-Study-with-100-NLP-Re.md  2503.09516-Search-R1-Training-LLMs-to-Reason-and-Leverage-Search-Engines-with-Reinforcement.md  2503.13657-Why-Do-Multi-Agent-LLM-Systems-Fail.md  2503.21460-Large-Language-Model-Agent-A-Survey-on-Methodology-Applications-and-Challenges.md  2504.08066-The-AI-Scientist-v2-Workshop-Level-Automated-Scientific-Discovery-via-Agentic-Tr.md  2509.17567-LIMI-Less-is-More-for-Agency.md  (+32 more)
docs_backup/: index.md
examples/: 2408.03314_example.md
multi_prompt_pkg/: __init__.py  cli.py  config.py  llm.py  pdf.py  pipeline.py  prompts.py  schemas.py  storage.py  summarizer.py
prompts/: default_instructions.txt  default_question.txt
throaway_script/: enrich_interested.py  exa_search_missing_papers.py  generate_example.py  import_exa.py
(+1767 files in other folders)
